--- a/viewDetailProfile.html
+++ b/viewDetailProfile.html
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div>
-        <button class="flex flex-row items-center bg-white w-full px-2 py-2 border-orange-500 rounded-full">
+        <button class="flex flex-row items-center bg-white w-full px-2 py-2 border border-orange-500 rounded-full">
           <img src="./img/1.png" alt="" class="w-6 h-6">
           <span class="text-[16px] text-[#585858]">Start a Chat</span>
         </button>
