--- a/editProfile.html
+++ b/editProfile.html
@@ -30,16 +30,16 @@
                         </div>
                         <div class="flex items-center justify-center px-[15px] mt-4 pb-[20px] shadow-md rounded-b-full">
                             <a href="#personal"
-                                class="shadow-md text-white py-2 px-4 rounded-full mr-3 bg-gradient btn-toggle active"
+                                class="shadow-md text-white py-2 px-4 rounded-full mr-3 bg-gradient font-semibold btn-toggle "
                                 onclick="toggleForm('personal',this)">
                                 Personal Details
                             </a>
                             <a href="#education"
-                                class="shadow-md text-white py-2 px-4 rounded-full mr-3 bg-gradient btn-toggle"
+                                class="shadow-md text-white py-2 px-4 rounded-full mr-3 bg-gradient font-semibold btn-toggle active"
                                 onclick="toggleForm('education',this)">
                                 Education
                             </a>
-                           
+
                         </div>
                     </div>
                     <div class="overflow-y-auto mt-[200px] grid grid-cols-1 gap-x-2 gap-y-4 sm:grid-cols-6 px-2"
@@ -408,7 +408,7 @@
                 </div>
                 <!-- menu bottom -->
                 <div class="bg-white">
-                    
+
                 </div>
                 <div style="
                             background: linear-gradient(
