--- a/conferenceDetails.html
+++ b/conferenceDetails.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="mt-4"  style="margin-left: 10px;border: 2px solid gray; width: 130px; border-radius: 30px; padding: 8px 5px;text-align: center;">
-            Price : 100$
+            Price : $ 100
         </div>
         <div  style=" height: 400px; width: 400px;margin-left: 10px; overflow-y: scroll;margin-bottom: 5rem;box-shadow: 0px 5px 4px 0px #00000040;padding: 15px 30px;" class="card rounded-[40px] overflow-y-auto">
             <div >
