--- a/createPost.html
+++ b/createPost.html
@@ -359,8 +359,11 @@
                     </select>
 
                     <div class='flex flex-col gap-2'>
+                        <div class="flex flex-row justify-between rounded-md border border-gray-300  px-2 py-2 rounded-md">
                         <input type="file" accept="image/*"
-                            class="border border-gray-300 px-2 py-2 text-gray-400 text-left rounded-md" />
+                            class="text-gray-400 text-left " />
+                            <img src="./img/upload-gray.png" class="w-8 h-8" alt="">
+                        </div>
                         <div class='flex flex-row items-center'>
                             <button type="submit" class="text-white px-4 py-2 rounded-md bg-gradient">Create</button>
 
