Modified in booking call in both teacher and student

--- a/teacher_book-call.html
+++ b/teacher_book-call.html
@@ -471,8 +471,12 @@ span {
                     <div class="flex flex-row text-sm text-white"> 11:00-12:00
                     </div>
                     <hr class="w-[100px] font-bold">
-                    <span class="available_time text-white font-medium">Price: ₹ 300</span>
-                    <button class="text-[#585858] bg-white rounded-[50px] px-2 py-2 justify-end">Book Now</button>
+                    <span class="text-sm text-white font-medium">Price: ₹ 300</span>
+                    <div class="flex gap-5 ml-5">
+                        <i class="bi bi-pencil-square text-white text-lg"></i>
+                        <i class="bi bi-trash3-fill text-white text-lg"></i>
+                    </div>
+                    
                 </div> 
                 <div class="time_line">
                     <div class="available_time"> 12:00 </div>
