--- a/book-call.html
+++ b/book-call.html
@@ -480,12 +480,12 @@
       <div class="time_lines mx-2">
         <div class="time_line ">
           <div class="available_time"> 8:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
-        <div class="time_line booked_time">
-          <div class="available_time">09:00 - 10:00 </div>
-          <hr />
-        </div>
+        <div class="flex items-center bg-red-500 py-2 px-2 gap-3 rounded-3xl w-[60%] mb-2">
+          <div class=" flex text-sm text-white ">09:00 - 10:00 </div>
+          <hr class="w-[50%]"/>
+      </div> 
         <div class="time_line available_time flex flex-row gap-2">
           <div class="available_time text-white"> 11:00-12:00
           </div>
@@ -495,31 +495,31 @@
         </div>
         <div class="time_line">
           <div class="available_time"> 12:00 </div>
-          <hr />
+          <hr class="w-[100%] font-bold"/>
         </div>
         <div class="time_line">
           <div class="available_time"> 13:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
         <div class="time_line">
           <div class="available_time"> 14:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
         <div class="time_line">
           <div class="available_time"> 15:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
         <div class="time_line">
           <div class="available_time"> 16:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
         <div class="time_line">
           <div class="available_time"> 17:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
         <div class="time_line">
           <div class="available_time"> 18:00 </div>
-          <hr />
+          <hr class="w-[100%]"/>
         </div>
       </div>
     <div class="flex justify-center">
