--- a/call_details.html
+++ b/call_details.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="join-button">
                     <i class="bi bi-camera-video-fill "></i>
-                    Start Meeting
+                    Book Now
                 </div>
             </div>
         </div>
