--- a/call_meeting.html
+++ b/call_meeting.html
@@ -157,10 +157,10 @@ th, td {
       <div>
         <div
           class="bg-contain bg-no-repeat w-full h-[280px] sm:mx-auto sm:w-full sm:max-w-md"
-          style="background-image: url('./src/img/background-2.png')"
+          style="background-image: url('./img/background-2.png')"
             >
             <div class="flex justify-center items-center pt-[52px]">
-                <img src="./src/img/logo.png" alt="logo" />
+                <img src="./img/logo.png" alt="logo" />
             </div>
         </div>
         <div style="display: flex; justify-content: center; align-items: center; gap:68px;margin-top: -65px;  margin-bottom: 30px;">
@@ -248,10 +248,10 @@ th, td {
         </div>
         <div id="sticky_div" class="py-[10px] rounded-full mx-4 mb-2 ">
             <div class="flex items-center justify-between px-[50px]">
-              <img src="./src/img/events.png" alt="" />
-              <img src="./src/img/dis.png" alt="" />
-              <img src="./src/img/2.png" />
-              <img src="./src/img/3.png" />
+              <img src="./img/events.png" alt="" />
+              <img src="./img/dis.png" alt="" />
+              <img src="./img/2.png" />
+              <img src="./img/3.png" />
             </div>
         </div>
       </div>
