--- a/viewProfileStudent.html
+++ b/viewProfileStudent.html
@@ -18,11 +18,11 @@
         </div>
       </div>
       <!-- component -->
-      <div class="flex flex-col mx-2 mt-[280px] overflow-auto" style="height: 400px;">
-        <div class="border-2 rounded-3xl border-orange-400 drop-shadow-md p-3">
+      <div class="flex flex-col mx-2 mt-[260px] overflow-auto" style="height: 400px;">
+        <div class="border-2 bg-white rounded-3xl border-orange-400 drop-shadow-md p-3">
           <img src="./img/wom.png" class="mx-auto" alt="" />
           <div>
-            <div class="text-center text-gradient text-[18px]">
+            <div class="text-center font-semibold text-gradient text-[18px]">
               Student's Name
             </div>
           </div>
@@ -51,16 +51,16 @@
               <span>Share Calender</span>
             </button>
             <button class="flex bg-gradient px-2 py-2 text-white text-[16px] rounded-full">
-              <img src="./img/chat-inactive.png" class="mr-2" height="20" width="25"/>
+              <img src="./img/1.png" class="mr-2" height="20" width="25"/>
               <span>Start a Chat</span>
             </button>
           </div>
         </div>
 
-        <div class="border-2 rounded-3xl drop-shadow-md mt-3 p-3">
+        <div class="border-2 bg-white rounded-3xl drop-shadow-md mt-3 p-3">
           <div class="flex justify-center">
             <button
-              class="border-2 border-orange-400 rounded-full px-2 py-1 text-center text-gradient text-[18px]"
+              class="border-2 border-orange-400 rounded-full px-2 py-1 mb-2 text-center text-gradient text-[18px]"
             >
               Education Details
             </button>
@@ -94,10 +94,10 @@
           </div>
         </div>
 
-        <div class="border-2 rounded-3xl drop-shadow-md mt-3 p-3">
+        <div class="border-2 bg-white rounded-3xl drop-shadow-md mt-3 p-3">
           <div class="flex justify-center">
             <button
-              class="border-2 border-orange-400 rounded-full px-2 py-1 text-center text-gradient text-[18px]"
+              class="border-2 border-orange-400 rounded-full px-2 py-1 mb-2 text-center text-gradient text-[18px]"
             >
               Relocation Details
             </button>
