--- a/referralEarnings.html
+++ b/referralEarnings.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Referral Earnings</title>
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 
 <body>
     <div class='flex flex-col gap-2 font-primary items-center min-h-screen'>
         <!-- header background section -->
         <div class="bg-cover bg-center bg-no-repeat w-screen h-[280px] min-w-screen fixed top-0"
-            style="background-image: url('../img/background-2.png')">
+            style="background-image: url('./img/background-2.png')">
             <div class="flex justify-center items-center pt-[48px]">
-                <img src="../img/logo.png" alt="logo" class='' />
+                <img src="./img/logo.png" alt="logo" class='' />
             </div>
         </div>
         <div class='fixed mt-[200px] self-start mx-8'>
@@ -46,7 +46,7 @@
                 <div class='flex flex-row justify-between items-center gap-1 align-middle'>
                     <button
                         class=' bg-gradient w-1/2 flex flex-row items-center justify-center mt-2 focus:outline-none  h-[48px] gap-2 text-white px-auto py-2 rounded-full'>
-                        <img src="../img/mail.png" class='order-first items-center pointer-events-none w-[30px] h-[28px]' />
+                        <img src="./img/mail.png" class='order-first items-center pointer-events-none w-[30px] h-[28px]' />
                         <p class='text-base'>Email Report</p>
                     </button>
                     <div class='flex flex-col gap-1 w-1/2 self-center'>
@@ -56,13 +56,16 @@
                             class='border border-gray-400 h-[24px] text-sm rounded-full p-2' defaultValue="" readOnly />
                     </div>
                 </div>
+                <div class="flex items-center justify-center mt-2">
+                    <button class="bg-white shadow-md text-gradient font-semibold px-2 py-2 rounded-full border border-orange-400">Add/ update your payment details</button>
+                </div>
             </div>
-            <div class='overflow-y-auto mt-[440px] rounded-[50px] py-2 w-screen'
+            <div class='overflow-y-auto mt-[500px] rounded-[50px] py-2 w-screen'
                 style="max-height: calc(100vh - 510px);">
                 <div class='flex flex-col gap-2  items-center'>
                     <div class='flex flex-row p-2 justify-between items-center bg-white w-10/12 rounded-xl shadow-md'>
                         <div class='flex flex-row gap-4'>
-                            <img src="../img/data.png" alt="" class='h-10 w-8' />
+                            <img src="./img/data.png" alt="" class='h-10 w-8' />
                             <div class='flex flex-col'>
                                 <p class='text-[14px] font-semibold text-gray-400'>Referral Title</p>
                                 <p class='text-[11px] text-gray-400'>2024-04-04</p>
@@ -74,7 +77,7 @@
                     </div>
                     <div class='flex flex-row p-2 justify-between items-center bg-white w-10/12 rounded-xl shadow-md'>
                         <div class='flex flex-row gap-4'>
-                            <img src="../img/data.png" alt="" class='h-10 w-8' />
+                            <img src="./img/data.png" alt="" class='h-10 w-8' />
                             <div class='flex flex-col'>
                                 <p class='text-[14px] font-semibold text-gray-400'>Referral Title</p>
                                 <p class='text-[11px] text-gray-400'>2024-04-04</p>
@@ -86,7 +89,7 @@
                     </div>
                     <div class='flex flex-row p-2 justify-between items-center bg-white w-10/12 rounded-xl shadow-md'>
                         <div class='flex flex-row gap-4'>
-                            <img src="../img/data.png" alt="" class='h-10 w-8' />
+                            <img src="./img/data.png" alt="" class='h-10 w-8' />
                             <div class='flex flex-col'>
                                 <p class='text-[14px] font-semibold text-gray-400'>Referral Title</p>
                                 <p class='text-[11px] text-gray-400'>2024-04-04</p>
@@ -98,7 +101,7 @@
                     </div>
                     <div class='flex flex-row p-2 justify-between items-center bg-white w-10/12 rounded-xl shadow-md'>
                         <div class='flex flex-row gap-4'>
-                            <img src="../img/data.png" alt="" class='h-10 w-8' />
+                            <img src="./img/data.png" alt="" class='h-10 w-8' />
                             <div class='flex flex-col'>
                                 <p class='text-[14px] font-semibold text-gray-400'>Referral Title</p>
                                 <p class='text-[11px] text-gray-400'>2024-04-04</p>
@@ -110,7 +113,7 @@
                     </div>
                     <div class='flex flex-row p-2 justify-between items-center bg-white w-10/12 rounded-xl shadow-md'>
                         <div class='flex flex-row gap-4'>
-                            <img src="../img/data.png" alt="" class='h-10 w-8' />
+                            <img src="./img/data.png" alt="" class='h-10 w-8' />
                             <div class='flex flex-col'>
                                 <p class='text-[14px] font-semibold text-gray-400'>Referral Title</p>
                                 <p class='text-[11px] text-gray-400'>2024-04-04</p>
@@ -122,7 +125,7 @@
                     </div>
                     <div class='flex flex-row p-2 justify-between items-center bg-white w-10/12 rounded-xl shadow-md'>
                         <div class='flex flex-row gap-4'>
-                            <img src="../img/data.png" alt="" class='h-10 w-8' />
+                            <img src="./img/data.png" alt="" class='h-10 w-8' />
                             <div class='flex flex-col'>
                                 <p class='text-[14px] font-semibold text-gray-400'>Referral Title</p>
                                 <p class='text-[11px] text-gray-400'>2024-04-04</p>
@@ -149,10 +152,10 @@
     
   " class="flex flex-row justify-between shadow-md items-center px-[32px] rounded-[100px] w-11/12 h-[64px] mb-3">
 
-            <img src="../img/4.png" alt="" />
-            <img src="../img/dis.png" alt="" />
-            <img src="../img/peeep.png" />
-            <img src="../img/3.png" />
+            <img src="./img/4.png" alt="" />
+            <img src="./img/dis.png" alt="" />
+            <img src="./img/peeep.png" />
+            <img src="./img/3.png" />
 
         </div>
     </div>
