--- a/conference_meeting.html
+++ b/conference_meeting.html
@@ -166,10 +166,10 @@ th, td {
         <div style="display: flex; justify-content: center; align-items: center; gap:68px;margin-top: -65px;  margin-bottom: 30px;">
             <span style="color: #AFAFAF; font-weight: 600;">Today</span>
             <h1 id="month-header">Month</h1>
-            <div style="display: flex; justify-content: space-around; align-items: center; gap: 30px;">
+            <!-- <div style="display: flex; justify-content: space-around; align-items: center; gap: 30px;">
               <i class="bi bi-bell-fill" style="font-size: 25px; color: #AFAFAF;"></i>
                 <i class="bi bi-gear-fill" style="font-size: 25px; color: #AFAFAF;"></i>
-            </div>
+            </div> -->
             </div>
         </div>
         <div class="flex justify-center items-center " >
@@ -182,7 +182,7 @@ th, td {
         </div>
         <div class="flex justify-center mt-5">
           <div class="">
-            <button class="inactive"style="font-weight: 600;padding: 5px 30px; border-radius: 10px 10px 10px 20px;"  >Calls</button>
+            <button class="inactive" style="font-weight: 600;padding: 5px 30px; border-radius: 10px 10px 10px 20px;"  >Calls</button>
             <button class="active"style="background: linear-gradient(
               180deg,
               #ff6535 0%,
