--- a/create_conference.html
+++ b/create_conference.html
@@ -297,7 +297,7 @@ input:checked + .slider-orange:before {
                
             </div>
         </div>
-        <div class='flex items-center gap-2 mb-20' >
+        <div class='flex items-center gap-2 mb-6' >
             <div class='w-44 text-center h-12 rounded-full ml-2  px-4 py-3' style='box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px'>
                 Set Price
             </div>
@@ -308,7 +308,11 @@ input:checked + .slider-orange:before {
                 </div>
             </div>
         </div>
-        <div class='w-full h-36 mb-16 -mt-8 rounded-3xl' style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px">
+        <div class="flex flex-col gap-2">
+          <span class="text-[#585858] font-semibold text-[16px]">Add Participants</span>
+          <img src="./img/calendar meet imags.png" class="w-[250px] h-[40px]" alt="">
+        </div>
+        <div class='w-full h-36 mb-16 mt-2 rounded-3xl' style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px">
             <div class='px-5 py-4 text-slate-500 font-semibold'>Meeting Link</div>
             <hr class='w-full text-slate-600 h-1'/>
             <textarea placeholder='Notes' class='w-full px-5 py-2 outline-none overflow-y-auto resize-none'
