--- a/viewProfileStudent.html
+++ b/viewProfileStudent.html
@@ -18,11 +18,11 @@
         </div>
       </div>
       <!-- component -->
-      <div class="flex flex-col mx-2 mt-[260px] overflow-auto" style="height: 400px;">
+      <div class="flex flex-col mx-2 mt-[250px] overflow-auto" style="height: 400px;">
         <div class="border-2 bg-white rounded-3xl border-orange-400 drop-shadow-md p-3">
           <img src="./img/wom.png" class="mx-auto" alt="" />
           <div>
-            <div class="text-center font-semibold text-gradient text-[18px]">
+            <div class="text-center font-semibold text-gradient text-[20px]">
               Student's Name
             </div>
           </div>
@@ -33,24 +33,24 @@
             </div>
             <div class="text-center text-[14px]">TimeZone : Asia/Kolkata</div>
             <div class="text-center text-[14px]">
-              <div class="font-semibold">Linkedin Profile</div>
-              <div> www.linkedin.com/in/</div>
+              <div class="my-2 font-semibold text-[#585858]">Linkedin Profile
+              <div class="font-normal"> www.linkedin.com/in/</div>
+            </div>
             </div>
           </div>
 
           <div class="text-center text-[14px]">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque
             voluptatem aut placeat in praesentium error rem quo voluptas
-            ratione. Facilis fugiat ratione quidem rerum ducimus natus ipsum
-            commodi quas blanditiis quae, qui explicabo hic!
+            ratione...<span class="text-blue-500">read more</span>
           </div>
 
           <div class="flex flex-col items-center justify-center gap-4 mt-2">
-            <button class="flex bg-gradient px-2 py-2 text-white text-[16px] rounded-full">
+            <button class="flex bg-gradient px-3 py-2 text-white text-[16px] rounded-full">
               <img src="./img/upload.png" class="mr-2"/>
               <span>Share Calender</span>
             </button>
-            <button class="flex bg-gradient px-2 py-2 text-white text-[16px] rounded-full">
+            <button class="flex items-center bg-gradient px-3 py-1 text-white text-[16px] rounded-full">
               <img src="./img/1.png" class="mr-2" height="20" width="25"/>
               <span>Start a Chat</span>
             </button>
@@ -67,7 +67,7 @@
           </div>
           <div>
             <div>
-              <div class="font-bold text-[14px] text-center">Currently Pursuing</div>
+              <div class="font-bold text-[14px] text-center text-[#585858]">Currently Pursuing</div>
               <div class="text-[14px] text-center">
                 <span class="font-medium">Category:</span> Kindergarten
                 <span class="font-medium">SubCategory:</span> Writing
@@ -75,7 +75,7 @@
             </div>
 
             <div>
-              <div class="font-bold text-[14px] text-center">Expert in</div>
+              <div class="font-bold text-[14px] text-center text-[#585858]">Expert in</div>
               <div class="text-[14px] text-center">
                 <span class="font-medium">Category:</span> Kindergarten
                 <span class="font-medium">SubCategory:</span> Writing
@@ -83,7 +83,7 @@
             </div>
 
             <div>
-              <div class="font-bold text-[14px] text-center">
+              <div class="font-bold text-[14px] text-[#585858] text-center">
                 Languages Known
               </div>
               <div class="text-[14px] text-center">
@@ -104,13 +104,13 @@
           </div>
           <div>
             <div>
-              <div class="font-bold text-[14px] text-center">Countries to relocate</div>
+              <div class="font-bold text-[14px] text-center text-[#585858]">Countries to relocate</div>
               <div class="text-[14px] text-center">Philipines, USA
               </div>
             </div>
 
             <div>
-              <div class="font-bold text-[14px] text-center">Cities to relocate</div>
+              <div class="font-bold text-[14px] text-center text-[#585858]  ">Cities to relocate</div>
               <div class="text-[14px] text-center">Delhi, Mumbai
               </div>
             </div>
