--- a/eventsFinishedConferenceT.html
+++ b/eventsFinishedConferenceT.html
@@ -76,13 +76,13 @@
               <div class="flex items-center">
                 <div class="flex items-center">
                   <img src="./img/vdvd.png" alt="" />
-                  <p class="pl-[5px] text-sm font-normal text-[#585858] pr-[8px]">
+                  <p class="pl-[5px] text-xs font-medium text-[#585858] pr-[8px]">
                     Date: Thursday, 22.02.2024
                   </p>
                 </div>
                 <div class="flex items-center">
                   <img src="./img/TTTT.png" alt="" />
-                  <p class="pl-[5px] text-sm font-normal text-[#585858]">
+                  <p class="pl-[5px] text-xs font-medium text-[#585858]">
                     Time: 15 pm
                   </p>
                 </div>
@@ -114,13 +114,13 @@
               <div class="flex items-center">
                 <div class="flex items-center">
                   <img src="./img/vdvd.png" alt="" />
-                  <p class="pl-[5px] text-sm font-normal text-[#585858] pr-[8px]">
+                  <p class="pl-[5px] text-xs font-medium text-[#585858] pr-[8px]">
                     Date: Thursday, 22.02.2024
                   </p>
                 </div>
                 <div class="flex items-center">
                   <img src="./img/TTTT.png" alt="" />
-                  <p class="pl-[5px] text-sm font-normal text-[#585858]">
+                  <p class="pl-[5px] text-xs font-medium text-[#585858]">
                     Time: 15 pm
                   </p>
                 </div>
@@ -155,10 +155,10 @@
               " class="py-[10px] rounded-full mx-4 mb-6">
         <div class="flex items-center justify-between px-[50px]">
           <img src="./img/search.png" alt="">
-          <img src="./img/events.png" alt="" />
+          <img src="./img/cal.png" alt="">
           <img src="./img/chat-inactive.png" alt="" />
+          <img src="./img/events.png" alt="" />
           <img src="./img/dots-inactive.png" />
-
         </div>
       </div>
     </div>
