--- a/premiumSubscription.html
+++ b/premiumSubscription.html
@@ -30,7 +30,7 @@
           <img src="./img/chevron-right.png" alt="" class="w-[13px] h-[12px]">
         </div>
         <span class="text-[#585858] font-medium text-[14px]">
-          Community Subscription Details
+          Premium Subscription Details
         </span>
         <!-- joining fee -->
         <div class="flex flex-col gap-2 w-full">
