available_calls commit

--- a/available_call.html
+++ b/available_call.html
@@ -292,7 +292,10 @@ input:checked + .slider-orange:before {
                 <button class="button"><span>Cancel</span></button>
                 <button class="button active"><span>Done</span></button>
               </div>
-              <button class="button w-6/12 text-center"><span>Share</span></button>
+              <div class="flex items-center justify-center text-gradient button w-6/12 text-center px-3">
+                <span>Share</span> 
+                <img src="./img/share.png" alt="">
+              </div>
           
             </div>
         </div>
