conference page changes

--- a/conferenceDetails.html
+++ b/conferenceDetails.html
@@ -106,7 +106,7 @@
         <div class="mt-4"  style="margin-left: 10px;border: 2px solid gray; width: 130px; border-radius: 30px; padding: 8px 5px;text-align: center;">
             Price : $ 100
         </div>
-        <div  style=" height: 400px; width: 400px;margin-left: 10px; overflow-y: scroll;margin-bottom: 5rem;box-shadow: 0px 5px 4px 0px #00000040;padding: 15px 30px;" class="card rounded-[40px] overflow-y-auto">
+        <div  style=" height: 420px; width: 400px;margin-left: 10px; overflow-y: scroll;margin-bottom: 5rem;box-shadow: 0px 5px 4px 0px #00000040;padding: 15px 30px;" class="card rounded-[40px] overflow-y-auto">
             <div >
                 <div style="font-weight: 500;">8 participants</div>
                 <div class="flex items-center " style="gap:1rem;">
@@ -150,6 +150,10 @@
                     <i class="bi bi-camera-video-fill "></i>
                     Start Meeting
                 </div>
+                <div class='flex items-center justify-center border border-orange-500 rounded-full py-1 w-64 mx-10 my-1'>
+            <span class="text-gradient">Share</span> 
+            <IoIosShareAlt  />
+        </div> 
             </div>
         </div>
         
